# Primility-test

./: CMakeLists.txt  README.md
src/: main.cpp  utils.cpp  utils.h
test/: test.cpp
